--- a/app/src/main/res/menu/menu_timeline.xml
+++ b/app/src/main/res/menu/menu_timeline.xml
@@ -7,4 +7,11 @@
         android:icon="@drawable/ic_profile"
         android:title="Profile"
         android:onClick="onProfileView"></item>
+
+    <item
+        android:id="@+id/miCompose"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_compose"
+        android:title="Compose Tweet"
+        android:onClick="onComposeView"></item>
 </menu>
