--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -15,7 +15,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/rlUserHeader">
+        android:id="@+id/rlUserHeader"
+        android:layout_marginBottom="20dp">
 
     <ImageView
         android:layout_width="75dp"
@@ -36,16 +37,29 @@
         android:textSize="16sp"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/ivProfileImage"
-        android:layout_toStartOf="@+id/ivProfileImage" />
+        android:layout_toStartOf="@+id/ivProfileImage"
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Username"
         android:id="@+id/tvUsername"
+        android:textSize="12sp"
         android:layout_below="@+id/tvFullName"
-        android:layout_alignLeft="@+id/tvFullName"
-        android:textSize="12sp"/>
+        android:layout_alignRight="@+id/tvFullName"
+        android:layout_alignEnd="@+id/tvFullName"
+        android:layout_marginTop="5dp" />
+
+        <ImageButton
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:id="@+id/btnExit"
+            android:src="@drawable/ic_exit"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:onClick="exitScreen" />
 
     </RelativeLayout>
 
