--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -66,7 +66,7 @@
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="300dp"
-        android:id="@+id/etHappening"
+        android:id="@+id/etTweet"
         android:layout_below="@+id/rlUserHeader"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -80,7 +80,7 @@
         android:layout_height="wrap_content"
         android:text="@string/tweet"
         android:id="@+id/btnTweet"
-        android:layout_below="@+id/etHappening"
+        android:layout_below="@+id/etTweet"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:onClick="postTweet"
