--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -26,7 +27,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:background="#0aa0fe"
+        android:background="#ffffff"
         android:layout_marginLeft="20dp" />
 
     <TextView
@@ -65,26 +66,29 @@
 
     <EditText
         android:layout_width="fill_parent"
-        android:layout_height="300dp"
+        android:layout_height="150dp"
         android:id="@+id/etTweet"
-        android:layout_below="@+id/rlUserHeader"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:background="@android:color/transparent"
         android:hint="@string/what_apos_s_happening"
-        android:layout_alignParentTop="false"
-        android:gravity="left|top" />
+        android:gravity="left|top"
+        android:layout_alignRight="@+id/btnTweet"
+        android:layout_alignEnd="@+id/btnTweet"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:maxLength="140"
+        android:layout_below="@+id/rlUserHeader" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/tweet"
         android:id="@+id/btnTweet"
+        android:onClick="postTweet"
+        android:background="#55acee"
         android:layout_below="@+id/etTweet"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:onClick="postTweet"
-        android:background="#55acee" />
+        android:layout_marginBottom="20dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -97,6 +101,7 @@
         android:layout_toStartOf="@+id/btnTweet"
         android:textSize="16sp"
         android:layout_marginRight="10dp" />
+
 
 
 </RelativeLayout>
