--- a/app/src/main/res/layout/fragment_tweets_list.xml
+++ b/app/src/main/res/layout/fragment_tweets_list.xml
@@ -3,10 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/lvTweets" />
+    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipe_refresh_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/lvTweets" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <!--<android.support.design.widget.FloatingActionButton-->
         <!--android:src="@drawable/ic_compose"-->
