--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -56,20 +56,24 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:id="@+id/btnExit"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
             android:src="@drawable/ic_exit"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:onClick="exitScreen" />
+            android:onClick="exitScreen"
+            android:background="#00ffffff" />
 
     </RelativeLayout>
 
     <EditText
         android:layout_width="fill_parent"
-        android:layout_height="150dp"
+        android:layout_height="250dp"
         android:id="@+id/etTweet"
         android:background="@android:color/transparent"
         android:hint="@string/what_apos_s_happening"
+        android:textSize="14sp"
         android:gravity="left|top"
         android:layout_alignRight="@+id/btnTweet"
         android:layout_alignEnd="@+id/btnTweet"
