--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:background="#00ffffff">
 
     <ImageView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:id="@+id/ivProfileImage"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:background="#0019ccf4"
-        android:layout_marginRight="5dp" />
+        android:layout_marginRight="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Billy"
         android:id="@+id/tvUserName"
+        android:textSize="12sp"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/ivProfileImage"
         android:layout_toEndOf="@+id/ivProfileImage"
@@ -28,10 +30,12 @@
         android:layout_height="wrap_content"
         android:text="Tweet"
         android:id="@+id/tvBody"
-        android:textSize="12sp"
+        android:maxLines="3"
+        android:textSize="10sp"
         android:layout_below="@+id/tvUserName"
         android:layout_toRightOf="@+id/ivProfileImage"
-        android:layout_toEndOf="@+id/ivProfileImage" />
+        android:layout_toEndOf="@+id/ivProfileImage"
+        android:layout_marginBottom="5dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -42,6 +46,42 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:textIsSelectable="false"
-        android:textSize="12sp" />
+        android:textSize="10sp" />
+
+    <ImageButton
+        android:layout_width="23dp"
+        android:layout_height="13dp"
+        android:id="@+id/imgBtnHeart"
+        android:src="@drawable/ic_heart"
+        android:background="#00ffffff"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:layout_alignTop="@+id/imgBtnRetweet"
+        android:layout_toLeftOf="@+id/tvTimeStamp"
+        android:layout_toStartOf="@+id/tvTimeStamp" />
+
+    <ImageButton
+        android:layout_width="27dp"
+        android:layout_height="17dp"
+        android:id="@+id/imgBtnRetweet"
+        android:background="#00ffffff"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:src="@drawable/ic_retweet"
+        android:layout_alignTop="@+id/imgBtnReply"
+        android:layout_centerHorizontal="true" />
+
+    <ImageButton
+        android:layout_width="27dp"
+        android:layout_height="17dp"
+        android:id="@+id/imgBtnReply"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:src="@drawable/ic_reply"
+        android:background="#00ffffff"
+        android:layout_alignBottom="@+id/ivProfileImage"
+        android:layout_alignLeft="@+id/tvBody"
+        android:layout_alignStart="@+id/tvBody" />
+
 
 </RelativeLayout>
