--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -82,6 +82,12 @@
         android:maxLength="140"
         android:layout_below="@+id/rlUserHeader" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/etTweet"
+        android:background="@android:color/darker_gray"/>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -92,7 +98,8 @@
         android:layout_below="@+id/etTweet"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="20dp" />
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -103,7 +110,7 @@
         android:layout_alignBottom="@+id/btnTweet"
         android:layout_toLeftOf="@+id/btnTweet"
         android:layout_toStartOf="@+id/btnTweet"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:layout_marginRight="10dp" />
 
 
