--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="holo_blue_light">#55acee</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
+    <color name="gray">#ededed</color>
 </resources>
